[project]
name = "backend"
version = "0.1.0"
description = "Backend for poker game"
authors = [
    {name = "Kibreab Aklilu",email = "Akkeba37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.runtime.dependencies]
fastapi = "^0.116.1"
pydantic = "^2.11.7"
psycopg2-binary = "^2.9.10"
pokerkit = "^0.6.3"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

